{{$NEXT}}

- A headers with attributes (like Content-Type) can escape values inside a
  quoted string, like value="foo \" bar". Courriel wasn't unescaping these
  values.

- The add() and unshift() methods in Courriel::Headers now just accept one
  value.

- Added Courriel::Headers->replace as a convenience method.


0.01     2011-05-31

- First release upon an unsuspecting world.